Improved robustness of event handler lifecycle

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ bevy_app = { git = "https://github.com/cart/bevy", branch = "next-gen-scenes", d
 bevy_ecs = { git = "https://github.com/cart/bevy", branch = "next-gen-scenes", default-features = false, features = [
   "std",
 ] }
+bevy_utils = { git = "https://github.com/cart/bevy", branch = "next-gen-scenes", default-features = false, features = [
+  "std",
+] }
 log = { version = "0.4", default-features = false }
 futures = { version = "0.3.31", default-features = false, features = [
   "alloc",
