--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bevy_ecs = { version = "0.17.1", default-features = false, features = [
 bevy_utils = { version = "0.17.1", default-features = false, features = [
   "std",
 ] }
+bevy_added = { path = "../becs-bweb/crates/bevy_added" }
 log = { version = "0.4", default-features = false }
 futures = { version = "0.3.31", default-features = false, features = [
   "alloc",
@@ -26,17 +27,22 @@ futures = { version = "0.3.31", default-features = false, features = [
 send_wrapper = "0.6.0"
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
+js-sys = "0.3.78"
 
 [dependencies.web-sys]
 version = "0.3.77"
 features = [
   "Window",
+  "Element",
+  "DomRect",
   "HtmlElement",
   "HtmlHeadElement",
   "CssStyleDeclaration",
   "Document",
   "Text",
   "Event",
+  "FocusEvent",
+  "InputEvent",
   "DomTokenList",
   "PointerEvent",
   "Location",
